fixed formulario text size, working on overscroll on iphone

--- a/scss/_mediaQueries.scss
+++ b/scss/_mediaQueries.scss
@@ -71,6 +71,10 @@
 		padding: 1rem 0rem;
 		font-size: 1.4rem;
 	}
+	.formularioTexto{
+		padding: 4px;
+		font-size: 16px;
+	}
 
 }
 
