--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -637,10 +637,6 @@ p.textoFooter{
 	font-size: 1.2rem;
 	line-height: 2rem;
 }
-
-body{
-	overscroll-behavior: none;
-}
 html{
 	background-color: #001c2d;
 	scroll-behavior: smooth;
